[tool.poetry]
name = "tweepy-self"
version = "1.0.0"
description = "Twitter (selfbot) for Python!"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter"}]

[tool.poetry.dependencies]
python = "^3.11"
curl_cffi = {version = "0.6.0b9", allow-prereleases = true}
python3-capsolver = "^0.9"
better-proxy = "0.5.0"
beautifulsoup4 = "^4"
pydantic = "^2"
lxml = "^5"
pyotp = "^2"
yarl = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
