[tool.poetry]
name = "tweepy-self"
version = "1.7.0"
description = "Twitter (selfbot) for Python!"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/tweepy-self"
packages = [{include = "twitter"}]

[tool.poetry.dependencies]
python = "^3.11"
curl_cffi = {version = "0.6.0b9", allow-prereleases = true}
better-proxy = "1.1.1"
beautifulsoup4 = "^4"
pydantic = ">=1"
lxml = "^5"
pyotp = "^2"
yarl = "^1"
aiohttp = "^3.9"
tenacity = "^8"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
